Bindings/CEGUI/hBuild/include/ClassWindow.h

// Constructor for Window
void cegui_wnd_construct(char * type_c, char * name_c, struct hg3dclass_struct * result_c);
// Destructor for Window
void cegui_wnd_destruct(struct hg3dclass_struct * thisclass_c);
// return a String object holding the type name for this Window
void cegui_wnd_getType(struct hg3dclass_struct * thisclass_c, char * result_c);
// return a String object holding the name of this Window
void cegui_wnd_getName(struct hg3dclass_struct * thisclass_c, char * result_c);
// returns whether or not this Window
void cegui_wnd_isDestroyedByParent(struct hg3dclass_struct * thisclass_c, int * result_c);
// returns whether or not this WindowWindow
void cegui_wnd_isAlwaysOnTop(struct hg3dclass_struct * thisclass_c, int * result_c);
// return whether the Window
void cegui_wnd_isDisabled(struct hg3dclass_struct * thisclass_c, int localOnly_c, int * result_c);
// return true if the Window
void cegui_wnd_isVisible(struct hg3dclass_struct * thisclass_c, int localOnly_c, int * result_c);
// return true if this is the active Window
void cegui_wnd_isActive(struct hg3dclass_struct * thisclass_c, int * result_c);
// return true if this WindowWindow
void cegui_wnd_isClippedByParent(struct hg3dclass_struct * thisclass_c, int * result_c);
// return the ID code currently assigned to this Window
void cegui_wnd_getID(struct hg3dclass_struct * thisclass_c, unsigned int * result_c);
// return the number of child WindowWindow
void cegui_wnd_getChildCount(struct hg3dclass_struct * thisclass_c, int * result_c);
// returns whether a WindowWindow
void cegui_wnd_isChild(struct hg3dclass_struct * thisclass_c, char * name_c, int * result_c);
// returns whether at least one window with the given ID code is attached to this Window
void cegui_wnd_isChild2(struct hg3dclass_struct * thisclass_c, unsigned int ID_c, int * result_c);
// returns whether at least one window with the given ID code is attached to this Window
void cegui_wnd_isChildRecursive(struct hg3dclass_struct * thisclass_c, unsigned int ID_c, int * result_c);
// return true if the given Window
void cegui_wnd_isChild3(struct hg3dclass_struct * thisclass_c, struct hg3dclass_struct * window_c, int * result_c);
// return a pointer to the child window with the specified name. 
void cegui_wnd_getChild(struct hg3dclass_struct * thisclass_c, char * name_c, struct hg3dclass_struct * result_c);
// return a pointer to the first attached child window with the specified ID value. 
void cegui_wnd_getChild2(struct hg3dclass_struct * thisclass_c, unsigned int ID_c, struct hg3dclass_struct * result_c);
// return a pointer to the first attached child window with the specified name. Children are traversed recursively. 
void cegui_wnd_getChildRecursive(struct hg3dclass_struct * thisclass_c, char * name_c, struct hg3dclass_struct * result_c);
// return a pointer to the first attached child window with the specified ID value. Children are traversed recursively. 
void cegui_wnd_getChildRecursive2(struct hg3dclass_struct * thisclass_c, unsigned int ID_c, struct hg3dclass_struct * result_c);
// return a pointer to the child window that is attached to 'this' at the given index. 
void cegui_wnd_getChildAtIdx(struct hg3dclass_struct * thisclass_c, int idx_c, struct hg3dclass_struct * result_c);
// return a pointer to the WindowWindow
void cegui_wnd_getActiveChild(struct hg3dclass_struct * thisclass_c, struct hg3dclass_struct * result_c);
// 
void cegui_wnd_getActiveChild2(struct hg3dclass_struct * thisclass_c, struct hg3dclass_struct * result_c);
// return true if the specified WindowWindow
void cegui_wnd_isAncestor(struct hg3dclass_struct * thisclass_c, char * name_c, int * result_c);
// return true if any WindowWindow
void cegui_wnd_isAncestor2(struct hg3dclass_struct * thisclass_c, unsigned int ID_c, int * result_c);
// return true if the specified WindowWindow
void cegui_wnd_isAncestor3(struct hg3dclass_struct * thisclass_c, struct hg3dclass_struct * window_c, int * result_c);
// return the active FontWindow
void cegui_wnd_getFont(struct hg3dclass_struct * thisclass_c, int useDefault_c, struct hg3dclass_struct * result_c);
// return the current text for the Window
void cegui_wnd_getText(struct hg3dclass_struct * thisclass_c, char * result_c);
// return text string with visual
void cegui_wnd_getTextVisual(struct hg3dclass_struct * thisclass_c, char * result_c);
// return true if the Window
void cegui_wnd_inheritsAlpha(struct hg3dclass_struct * thisclass_c, int * result_c);
// return the current alpha value set for this Window
void cegui_wnd_getAlpha(struct hg3dclass_struct * thisclass_c, float * result_c);
// return the effective alpha value that will be used when rendering this window, taking into account inheritance of parent window(s) alpha. 
void cegui_wnd_getEffectiveAlpha(struct hg3dclass_struct * thisclass_c, float * result_c);
// return true if this Window
void cegui_wnd_isCapturedByThis(struct hg3dclass_struct * thisclass_c, int * result_c);
// return true if an ancestor window has captured inputs. 
void cegui_wnd_isCapturedByAncestor(struct hg3dclass_struct * thisclass_c, int * result_c);
// return true if a child window has captured inputs. 
void cegui_wnd_isCapturedByChild(struct hg3dclass_struct * thisclass_c, int * result_c);
// return the parent of this Window
void cegui_wnd_getParent(struct hg3dclass_struct * thisclass_c, struct hg3dclass_struct * result_c);
// Return whether this window is set to restore old input capture when it loses input capture. 
void cegui_wnd_restoresOldCapture(struct hg3dclass_struct * thisclass_c, int * result_c);
// Return whether z-order changes are enabled or disabled for this Window
void cegui_wnd_isZOrderingEnabled(struct hg3dclass_struct * thisclass_c, int * result_c);
// Return whether this window will receive multi-click events or multiple 'down' events instead. 
void cegui_wnd_wantsMultiClickEvents(struct hg3dclass_struct * thisclass_c, int * result_c);
// Return whether mouse button down event autorepeat is enabled for this window. 
void cegui_wnd_isMouseAutoRepeatEnabled(struct hg3dclass_struct * thisclass_c, int * result_c);
// Return the current auto-repeat delay setting for this window. 
void cegui_wnd_getAutoRepeatDelay(struct hg3dclass_struct * thisclass_c, float * result_c);
// Return the current auto-repeat rate setting for this window. 
void cegui_wnd_getAutoRepeatRate(struct hg3dclass_struct * thisclass_c, float * result_c);
// Return whether the window wants inputs passed to its attached child windows when the window has inputs captured. 
void cegui_wnd_distributesCapturedInputs(struct hg3dclass_struct * thisclass_c, int * result_c);
// Return whether this WindowTooltipTooltip
void cegui_wnd_isUsingDefaultTooltip(struct hg3dclass_struct * thisclass_c, int * result_c);
// Return a pointer to the TooltipWindowTooltipWindowTooltip
void cegui_wnd_getTooltip(struct hg3dclass_struct * thisclass_c, struct hg3dclass_struct * result_c);
// Return the custom tooltip type. 
void cegui_wnd_getTooltipType(struct hg3dclass_struct * thisclass_c, char * result_c);
// Return the current tooltip text set for this Window
void cegui_wnd_getTooltipText(struct hg3dclass_struct * thisclass_c, char * result_c);
// Return whether this window inherits Tooltip
void cegui_wnd_inheritsTooltipText(struct hg3dclass_struct * thisclass_c, int * result_c);
// Return whether this window will rise to the top of the z-order when clicked with the left mouse button. 
void cegui_wnd_isRiseOnClickEnabled(struct hg3dclass_struct * thisclass_c, int * result_c);
// Return whether this window was inherited from the given class name at some point in the inheritance hierarchy. 
void cegui_wnd_testClassName(struct hg3dclass_struct * thisclass_c, char * class_name_c, int * result_c);
// Get the vertical alignment. 
void cegui_wnd_getVerticalAlignment(struct hg3dclass_struct * thisclass_c, enum EnumVerticalAlignment * result_c);
// Get the horizontal alignment. 
void cegui_wnd_getHorizontalAlignment(struct hg3dclass_struct * thisclass_c, enum EnumHorizontalAlignment * result_c);
// Get the name of the LookNFeel assigned to this window. 
void cegui_wnd_getLookNFeel(struct hg3dclass_struct * thisclass_c, char * result_c);
// Get whether or not this Window
void cegui_wnd_getModalState(struct hg3dclass_struct * thisclass_c, int * result_c);
// Returns a named user string. 
void cegui_wnd_getUserString(struct hg3dclass_struct * thisclass_c, char * name_c, char * result_c);
// Return whether a user string with the specified name exists. 
void cegui_wnd_isUserStringDefined(struct hg3dclass_struct * thisclass_c, char * name_c, int * result_c);
// Returns the active sibling window. 
void cegui_wnd_getActiveSibling(struct hg3dclass_struct * thisclass_c, struct hg3dclass_struct * result_c);
// Return the pixel Width of the parent element. This always returns a valid number. 
void cegui_wnd_getParentPixelWidth(struct hg3dclass_struct * thisclass_c, float * result_c);
// Return the pixel Height of the parent element. This always returns a valid number. 
void cegui_wnd_getParentPixelHeight(struct hg3dclass_struct * thisclass_c, float * result_c);
// Returns whether this window should ignore mouse event and pass them through to and other windows behind it. In effect making the window transparent to the mouse. 
void cegui_wnd_isMousePassThroughEnabled(struct hg3dclass_struct * thisclass_c, int * result_c);
// Returns whether this window is an auto-child window. All auto-child windows have "__auto_" in their name, but this is faster. 
void cegui_wnd_isAutoWindow(struct hg3dclass_struct * thisclass_c, int * result_c);
// Returns whether this window is allowed to write XML. 
void cegui_wnd_isWritingXMLAllowed(struct hg3dclass_struct * thisclass_c, int * result_c);
// Returns whether this Window
void cegui_wnd_isDragDropTarget(struct hg3dclass_struct * thisclass_c, int * result_c);
// Returns whether automatic
void cegui_wnd_isUsingAutoRenderingSurface(struct hg3dclass_struct * thisclass_c, int * result_c);
// Returns the window at the root of the hierarchy starting at this Window
void cegui_wnd_getRootWindow(struct hg3dclass_struct * thisclass_c, struct hg3dclass_struct * result_c);