Bindings/CEGUI/hBuild/HGamer3D/Bindings/CEGUI/ClassWindow.chs

{-# LANGUAGE ForeignFunctionInterface #-}
{-# LANGUAGE TypeSynonymInstances #-}

-- This source file is part of HGamer3D, a project to enable 3D game development 
-- in Haskell. For the latest info, see http://www.hgamer3d.org .
-- 

-- (c) 2011-2014 Peter Althainz
-- 
-- Licensed under the Apache License, Version 2.0 (the "License");
-- you may not use this file except in compliance with the License.
-- You may obtain a copy of the License at
-- 
--     http://www.apache.org/licenses/LICENSE-2.0
-- 
-- Unless required by applicable law or agreed to in writing, software
-- distributed under the License is distributed on an "AS IS" BASIS,
-- WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-- See the License for the specific language governing permissions and
-- limitations under the License.
-- 


-- ClassWindow.chs

-- 

module HGamer3D.Bindings.CEGUI.ClassWindow where

import Foreign
import Foreign.Ptr
import Foreign.C

import HGamer3D.Data.HG3DClass
import HGamer3D.Data.Vector
import HGamer3D.Data.Colour
import HGamer3D.Data.Angle

{# import HGamer3D.Bindings.CEGUI.Utils #}
{# import HGamer3D.Bindings.CEGUI.ClassPtr #}
{# import HGamer3D.Bindings.CEGUI.StructHG3DClass #}
{# import HGamer3D.Bindings.CEGUI.EnumVerticalAlignment #}
{# import HGamer3D.Bindings.CEGUI.EnumHorizontalAlignment #}
{# import HGamer3D.Bindings.CEGUI.EnumWindowUpdateMode #}

#include "ClassWindow.h"
{- function Window -}
{#fun cegui_wnd_construct as new 
{ withCString* `String' ,
 withCString* `String' ,
 alloca- `HG3DClass' peek*} -> `()'  #}

{- function ~Window -}
{#fun cegui_wnd_destruct as delete 
{ withHG3DClass* `HG3DClass' } -> `()'  #}

{- function getType -}
{#fun cegui_wnd_getType as getType 
{ withHG3DClass* `HG3DClass' ,
 alloc64k- `String' peekCString*} -> `()'  #}

{- function getName -}
{#fun cegui_wnd_getName as getName 
{ withHG3DClass* `HG3DClass' ,
 alloc64k- `String' peekCString*} -> `()'  #}

{- function isDestroyedByParent -}
{#fun cegui_wnd_isDestroyedByParent as isDestroyedByParent 
{ withHG3DClass* `HG3DClass' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function isAlwaysOnTop -}
{#fun cegui_wnd_isAlwaysOnTop as isAlwaysOnTop 
{ withHG3DClass* `HG3DClass' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function isDisabled -}
{#fun cegui_wnd_isDisabled as isDisabled 
{ withHG3DClass* `HG3DClass' ,
 fromBool `Bool' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function isVisible -}
{#fun cegui_wnd_isVisible as isVisible 
{ withHG3DClass* `HG3DClass' ,
 fromBool `Bool' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function isActive -}
{#fun cegui_wnd_isActive as isActive 
{ withHG3DClass* `HG3DClass' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function isClippedByParent -}
{#fun cegui_wnd_isClippedByParent as isClippedByParent 
{ withHG3DClass* `HG3DClass' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function getID -}
{#fun cegui_wnd_getID as getID 
{ withHG3DClass* `HG3DClass' ,
 alloca- `Int' peekIntConv*} -> `()'  #}

{- function getChildCount -}
{#fun cegui_wnd_getChildCount as getChildCount 
{ withHG3DClass* `HG3DClass' ,
 alloca- `Int' peekIntConv*} -> `()'  #}

{- function isChild -}
{#fun cegui_wnd_isChild as isChild 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function isChild2 -}
{#fun cegui_wnd_isChild2 as isChild2 
{ withHG3DClass* `HG3DClass' ,
 fromIntegral `Int' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function isChildRecursive -}
{#fun cegui_wnd_isChildRecursive as isChildRecursive 
{ withHG3DClass* `HG3DClass' ,
 fromIntegral `Int' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function isChild3 -}
{#fun cegui_wnd_isChild3 as isChild3 
{ withHG3DClass* `HG3DClass' ,
 withHG3DClass* `HG3DClass' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function getChild -}
{#fun cegui_wnd_getChild as getChild 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' ,
 alloca- `HG3DClass' peek*} -> `()'  #}

{- function getChild2 -}
{#fun cegui_wnd_getChild2 as getChild2 
{ withHG3DClass* `HG3DClass' ,
 fromIntegral `Int' ,
 alloca- `HG3DClass' peek*} -> `()'  #}

{- function getChildRecursive -}
{#fun cegui_wnd_getChildRecursive as getChildRecursive 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' ,
 alloca- `HG3DClass' peek*} -> `()'  #}

{- function getChildRecursive2 -}
{#fun cegui_wnd_getChildRecursive2 as getChildRecursive2 
{ withHG3DClass* `HG3DClass' ,
 fromIntegral `Int' ,
 alloca- `HG3DClass' peek*} -> `()'  #}

{- function getChildAtIdx -}
{#fun cegui_wnd_getChildAtIdx as getChildAtIdx 
{ withHG3DClass* `HG3DClass' ,
 fromIntegral `Int' ,
 alloca- `HG3DClass' peek*} -> `()'  #}

{- function getActiveChild -}
{#fun cegui_wnd_getActiveChild as getActiveChild 
{ withHG3DClass* `HG3DClass' ,
 alloca- `HG3DClass' peek*} -> `()'  #}

{- function getActiveChild2 -}
{#fun cegui_wnd_getActiveChild2 as getActiveChild2 
{ withHG3DClass* `HG3DClass' ,
 alloca- `HG3DClass' peek*} -> `()'  #}

{- function isAncestor -}
{#fun cegui_wnd_isAncestor as isAncestor 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function isAncestor2 -}
{#fun cegui_wnd_isAncestor2 as isAncestor2 
{ withHG3DClass* `HG3DClass' ,
 fromIntegral `Int' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function isAncestor3 -}
{#fun cegui_wnd_isAncestor3 as isAncestor3 
{ withHG3DClass* `HG3DClass' ,
 withHG3DClass* `HG3DClass' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function getFont -}
{#fun cegui_wnd_getFont as getFont 
{ withHG3DClass* `HG3DClass' ,
 fromBool `Bool' ,
 alloca- `HG3DClass' peek*} -> `()'  #}

{- function getText -}
{#fun cegui_wnd_getText as getText 
{ withHG3DClass* `HG3DClass' ,
 alloc64k- `String' peekCString*} -> `()'  #}

{- function getTextVisual -}
{#fun cegui_wnd_getTextVisual as getTextVisual 
{ withHG3DClass* `HG3DClass' ,
 alloc64k- `String' peekCString*} -> `()'  #}

{- function inheritsAlpha -}
{#fun cegui_wnd_inheritsAlpha as inheritsAlpha 
{ withHG3DClass* `HG3DClass' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function getAlpha -}
{#fun cegui_wnd_getAlpha as getAlpha 
{ withHG3DClass* `HG3DClass' ,
 alloca- `Float' peekFloatConv*} -> `()'  #}

{- function getEffectiveAlpha -}
{#fun cegui_wnd_getEffectiveAlpha as getEffectiveAlpha 
{ withHG3DClass* `HG3DClass' ,
 alloca- `Float' peekFloatConv*} -> `()'  #}

{- function isCapturedByThis -}
{#fun cegui_wnd_isCapturedByThis as isCapturedByThis 
{ withHG3DClass* `HG3DClass' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function isCapturedByAncestor -}
{#fun cegui_wnd_isCapturedByAncestor as isCapturedByAncestor 
{ withHG3DClass* `HG3DClass' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function isCapturedByChild -}
{#fun cegui_wnd_isCapturedByChild as isCapturedByChild 
{ withHG3DClass* `HG3DClass' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function getParent -}
{#fun cegui_wnd_getParent as getParent 
{ withHG3DClass* `HG3DClass' ,
 alloca- `HG3DClass' peek*} -> `()'  #}

{- function restoresOldCapture -}
{#fun cegui_wnd_restoresOldCapture as restoresOldCapture 
{ withHG3DClass* `HG3DClass' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function isZOrderingEnabled -}
{#fun cegui_wnd_isZOrderingEnabled as isZOrderingEnabled 
{ withHG3DClass* `HG3DClass' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function wantsMultiClickEvents -}
{#fun cegui_wnd_wantsMultiClickEvents as wantsMultiClickEvents 
{ withHG3DClass* `HG3DClass' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function isMouseAutoRepeatEnabled -}
{#fun cegui_wnd_isMouseAutoRepeatEnabled as isMouseAutoRepeatEnabled 
{ withHG3DClass* `HG3DClass' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function getAutoRepeatDelay -}
{#fun cegui_wnd_getAutoRepeatDelay as getAutoRepeatDelay 
{ withHG3DClass* `HG3DClass' ,
 alloca- `Float' peekFloatConv*} -> `()'  #}

{- function getAutoRepeatRate -}
{#fun cegui_wnd_getAutoRepeatRate as getAutoRepeatRate 
{ withHG3DClass* `HG3DClass' ,
 alloca- `Float' peekFloatConv*} -> `()'  #}

{- function distributesCapturedInputs -}
{#fun cegui_wnd_distributesCapturedInputs as distributesCapturedInputs 
{ withHG3DClass* `HG3DClass' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function isUsingDefaultTooltip -}
{#fun cegui_wnd_isUsingDefaultTooltip as isUsingDefaultTooltip 
{ withHG3DClass* `HG3DClass' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function getTooltip -}
{#fun cegui_wnd_getTooltip as getTooltip 
{ withHG3DClass* `HG3DClass' ,
 alloca- `HG3DClass' peek*} -> `()'  #}

{- function getTooltipType -}
{#fun cegui_wnd_getTooltipType as getTooltipType 
{ withHG3DClass* `HG3DClass' ,
 alloc64k- `String' peekCString*} -> `()'  #}

{- function getTooltipText -}
{#fun cegui_wnd_getTooltipText as getTooltipText 
{ withHG3DClass* `HG3DClass' ,
 alloc64k- `String' peekCString*} -> `()'  #}

{- function inheritsTooltipText -}
{#fun cegui_wnd_inheritsTooltipText as inheritsTooltipText 
{ withHG3DClass* `HG3DClass' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function isRiseOnClickEnabled -}
{#fun cegui_wnd_isRiseOnClickEnabled as isRiseOnClickEnabled 
{ withHG3DClass* `HG3DClass' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function testClassName -}
{#fun cegui_wnd_testClassName as testClassName 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function getVerticalAlignment -}
{#fun cegui_wnd_getVerticalAlignment as getVerticalAlignment 
{ withHG3DClass* `HG3DClass' ,
 alloca- `EnumVerticalAlignment' peekEnumUtil*} -> `()'  #}

{- function getHorizontalAlignment -}
{#fun cegui_wnd_getHorizontalAlignment as getHorizontalAlignment 
{ withHG3DClass* `HG3DClass' ,
 alloca- `EnumHorizontalAlignment' peekEnumUtil*} -> `()'  #}

{- function getLookNFeel -}
{#fun cegui_wnd_getLookNFeel as getLookNFeel 
{ withHG3DClass* `HG3DClass' ,
 alloc64k- `String' peekCString*} -> `()'  #}

{- function getModalState -}
{#fun cegui_wnd_getModalState as getModalState 
{ withHG3DClass* `HG3DClass' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function getUserString -}
{#fun cegui_wnd_getUserString as getUserString 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' ,
 alloc64k- `String' peekCString*} -> `()'  #}

{- function isUserStringDefined -}
{#fun cegui_wnd_isUserStringDefined as isUserStringDefined 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function getActiveSibling -}
{#fun cegui_wnd_getActiveSibling as getActiveSibling 
{ withHG3DClass* `HG3DClass' ,
 alloca- `HG3DClass' peek*} -> `()'  #}

{- function getParentPixelWidth -}
{#fun cegui_wnd_getParentPixelWidth as getParentPixelWidth 
{ withHG3DClass* `HG3DClass' ,
 alloca- `Float' peekFloatConv*} -> `()'  #}

{- function getParentPixelHeight -}
{#fun cegui_wnd_getParentPixelHeight as getParentPixelHeight 
{ withHG3DClass* `HG3DClass' ,
 alloca- `Float' peekFloatConv*} -> `()'  #}

{- function isMousePassThroughEnabled -}
{#fun cegui_wnd_isMousePassThroughEnabled as isMousePassThroughEnabled 
{ withHG3DClass* `HG3DClass' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function isAutoWindow -}
{#fun cegui_wnd_isAutoWindow as isAutoWindow 
{ withHG3DClass* `HG3DClass' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function isWritingXMLAllowed -}
{#fun cegui_wnd_isWritingXMLAllowed as isWritingXMLAllowed 
{ withHG3DClass* `HG3DClass' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function isDragDropTarget -}
{#fun cegui_wnd_isDragDropTarget as isDragDropTarget 
{ withHG3DClass* `HG3DClass' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function isUsingAutoRenderingSurface -}
{#fun cegui_wnd_isUsingAutoRenderingSurface as isUsingAutoRenderingSurface 
{ withHG3DClass* `HG3DClass' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function getRootWindow -}
{#fun cegui_wnd_getRootWindow as getRootWindow 
{ withHG3DClass* `HG3DClass' ,
 alloca- `HG3DClass' peek*} -> `()'  #}
